--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,3 +23,4 @@ pipeline {
 
 this is for hello2 branch 
 adding master branch changes to consider as a master ranch
+adding date for git fetch command
