--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,3 +24,5 @@ pipeline {
 this is for hello2 branch 
 adding master branch changes to consider as a master ranch
 adding date for git fetch command
+
+adding data for git fetch command to clarify doubts
